fix alignment in profile page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -122,8 +122,8 @@ h1 {
 /* Preferences page */
 
 .profile-image {
-  width: 50%;
-  float: right;
+  width: 100%;
+  height: auto;
 }
 
 .profile-info-text {
